2009-10-15  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Adam Roben.

        Fixes <http://webkit.org/b/30411>.
        REGRESSION(49485): pdevenv doesn't compile in parallel for non-chromium builds on Windows.
        
        Added a check for isChromium() in pdevenv, and pass /useenv if we are not
        building Chromium.

        * Scripts/pdevenv:

2009-10-15  Robin Dunn  <robin@alldunn.com>

        Reviewed by Kevin Ollivier.

        Add Mac package building scripts for wx.
        
        https://bugs.webkit.org/show_bug.cgi?id=30405

        * wx/build/build_utils.py:
        * wx/build/settings.py:
        * wx/packaging/build-mac-installer.py: Added.

2009-10-15  Zan Dobersek  <zandobersek@gmail.com>

        Reviewed by Gustavo Noronha.

        Enable Web Sockets support when running layout tests.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (resetDefaultsToConsistentValues):

2009-10-15  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Gustavo Noronha.

        Need to initialize event.button.button, since in most cases a
        button number is not passed as an argument.

        * DumpRenderTree/gtk/EventSender.cpp:
        (mouseDownCallback):
        (mouseUpCallback):

2009-10-15  Kevin Ollivier  <kevino@theolliviers.com>

        wx build fix. More SDK fixes for Mac, make sure we use the SDK corresponding to
        the OS if none was explicitly set.

        * wx/build/settings.py:

2009-10-14  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: enable developers extras within inspector layout tests.

        https://bugs.webkit.org/show_bug.cgi?id=30014

        * DumpRenderTree/mac/LayoutTestControllerMac.mm:
        (LayoutTestController::showWebInspector):
        (LayoutTestController::closeWebInspector):
        * DumpRenderTree/win/LayoutTestControllerWin.cpp:
        (LayoutTestController::showWebInspector):